--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         </main>
 
         <footer>
+            <div class="footer">
+                <hr>
+                <small>IT Gurtok Official Page 2024</small>
+                <hr>
+            </div>
         </footer>
         <script src="" async defer></script>
     </body>
